compiler/testData/diagnostics/tests/cyclicHierarchy/classInheritsNested.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
open class E : <!CYCLIC_INHERITANCE_HIERARCHY!>E.EE<!>() {
    open class EE
}
